cmake_minimum_required(VERSION 2.8)
project( mlcpp )
find_package( OpenCV REQUIRED )
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O3")
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(mlcpp main.cpp ${SOURCES})
target_link_libraries( mlcpp ${OpenCV_LIBS} )
